--- a/assets/style.css
+++ b/assets/style.css
@@ -106,6 +106,16 @@ p {
   font-size: 15px;
   color: #b0b0b0;
 }
+
+.absolute {
+  position: absolute;
+  width: 180px;
+  height: 40px;
+  border-radius: 0px 15px;
+  top: 0px;
+  right: 0px;
+  background-color: #ff498b;
+}
 main .mostPicked {
   display: flex;
   padding-left: 50px;
